[tool.poetry]
name = "undiff"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
transformers = "^4.45.2"
hydra-core = "^1.3.2"
einops = "^0.8.0"
torchaudio = "^2.4.1"
scipy = "^1.14.1"
tqdm = "^4.66.5"
llvmlite = "^0.43.0"
librosa = "^0.10.2.post1"
numpy = "2.0.2"
pytorch-lightning = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.389"
debugpy = "^1.8.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
